ADD: ProcessRemovalsByLengthRetained, ProcessRemovalsByLengthRetainedTotal, MortalityInstantaneousRetained.Test.cpp
CHG: Removed 'include_discards_' from MortalityInstantaneousRetained

UPD: Unit test building in ContributorsGuide.pdf

--- a/Documentation/ContributorsManual/ContributorsGuide.tex
+++ b/Documentation/ContributorsManual/ContributorsGuide.tex
@@ -184,7 +184,7 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 %\newcommand{\VER}{v\SourceControlDateDoc} % CASAL2 program version
 \newcommand{\CNAME}{\textsc{Casal2}} 
 \newcommand{\cname}{\texttt{casal2}} % casal2 binary name
-\newcommand{\authors}{C. Marsh and S. Rasmussen}
+\newcommand{\authors}{C. Marsh, S. Rasmussen and S. Datta}
 \newcommand{\email}{casal2@niwa.co.nz}
 \newcommand{\github}{\url{https://github.com/NIWAFisheriesModelling/CASAL2}}
 \newcommand{\authorlink}{\href{mailto:"CASAL2 Development Team"<casal2@niwa.co.nz>?subject=CASAL2:}{authors}} 
