Minor edits to discard equations in User Manual

--- a/Documentation/UserManual/Population.tex
+++ b/Documentation/UserManual/Population.tex
@@ -802,10 +802,10 @@ When the \texttt{mortality\_instantaneous\_retained} process is applied, the fol
 
     For each $f$, if $U_{f,obs} > U_{f,max}$, then $U_f$ is multiplied by $U_{f,max}/U_{f,obs}$ and the mortality pressures are recalculated. In this case the catch actually taken from the population in the model will differ from the specified catch, $C_f$.
 
-    \item Discard numbers-at-age (including their share of natural mortality) is $S_{a,j} (1 - R_{a,j}) n_{a,j} \exp(-0.5 t M_{a,j})$, and those that die at the end of the time step (updating the partition) are $D_{a,j} S_{a,j} (1 - R_{a,j}) n_{a,j} \exp(-t M_{a,j})$, where $D_{f,a}$ is the fraction that die on return to the sea.
+    \item Discard numbers-at-age (including their share of natural mortality) is $S_{a,j} (1 - R_{a,j}) D_{a,j} n_{a,j} \exp(-0.5 t M_{a,j})$, and those that die at the end of the time step (updating the partition) are $S_{a,j} (1 - R_{a,j}) D_{a,j} n_{a,j} \exp(-t M_{a,j})$, where $D_{a,j}$ is the fraction that die on return to the sea.
 
     \item The partition is updated by removing landed catch, natural mortality, and discard mortality
-        $$ n'_{a} = n_{a} \exp(-t M_a) \big[ 1 - \sum_f S_{f,a} U_f (R_{f,a} + D_{f,a} (1 - R_{f,a})) \big] $$
+        $$ n'_{a} = n_{a} \exp(-t M_a) \big[ 1 - \sum_f S_{f,a} U_f (R_{f,a} + (1 - R_{f,a}) D_{f,a}) \big] $$
 \end{itemize}
 
 
